[gd_scene load_steps=2 format=3 uid="uid://dhcki0w17a8m1"]

[ext_resource type="Script" path="res://base/components/looter_component.gd" id="1_xkt8y"]

[node name="LooterComponent" type="Area2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_xkt8y")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
